@@ -23,6 +23,7 @@ if IEEnv.platform() == "cent5.x86_64" :
 	# app specific builds
 	build( [ "APP=maya", "APP_VERSION=2012" ] )
 	build( [ "APP=houdini", "APP_VERSION=12.0.562" ] )
+	build( [ "APP=houdini", "APP_VERSION=12.0.581" ] )
 	build( [ "APP=nuke", "APP_VERSION=6.3v5" ] )
 	
 else :
